--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="goals">
-  <h3 class="w3-center">Goal > DEVELOPE GAMES</h3>
+  <h3 class="w3-center">Goal > DEVELOP GAMES</h3>
   <p class="w3-center"><em>We love videogames</em></p>
   <p>Our inspiration came from watching an Uncle in his love of games- he showed us some stuff in around '98 (yeah, we was young), 
   and from then on We have always wanted to know the answer to the big question- "How do they do that?". 
