--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="goals">
   <h3 class="w3-center">Goal > DEVELOP GAMES</h3>
   <p class="w3-center"><em>We love videogames</em></p>
-  <p>Our inspiration came from watching an Uncle in his love of games- he showed us some stuff in around '98 (yeah, we was young), 
-  and from then on We have always wanted to know the answer to the big question- "How do they do that?". 
-  We loved the way the game, 2D or 3D just held you in this virtual world, and in there, you can do whateverm and be whatever. 
-  It's a freedom. And by becoming a game designer, we knew we could see the answer to that question.</p>
+  <p>I have a dream today. I have a dream that one day every vertex shall be engulfed, 
+  every polygon shall be exalted and every mesh shall be made low, 
+  the rough places will be made bumpmaps and the turbo shmooted places will be made straight a
+  nd the glory of the shader shall be revealed and all gamer shall see it together.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Participate at GMTK GameJam 2021</b></p><br>
