--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@ body, html {
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Its a great opportunity for our team to have fun and make something!</p>
-        <a href="https://en.wikipedia.org/wiki/Game_jam">WHAT IS GAME JAMS?</a>
+      <p>We want to have fun!</p>
+      <p>We want to make games!</p>
+      <p>So we make fun games for Game Jams!</p>
+      <a href="https://en.wikipedia.org/wiki/Game_jam">WHAT IS GAME JAMS?</a>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">We are really good at:</p>
@@ -116,6 +118,10 @@ body, html {
   <p class="w3-wide"><i class="fa fa-photo"></i>Designe</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:15%">15%</div>
+  </div>
+  <p class="w3-wide"><i class="fa fa-suitcase"></i>Marketing and grammar</p>
+  <div class="w3-light-grey">
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:1%">1%</div>
   </div>
 </div>
 
